# Genesis-Plus-GX

./: .gitignore  CMakeLists.txt
core/: genesis.h  io_ctrl.h  loadrom.h  macros.h  mem68k.h  membnk.c  membnk.h  memz80.h  shared.h  state.h  system.c  system.h  types.h  vdp_ctrl.c  vdp_ctrl.h  vdp_render.h
core/cart_hw/: areplay.h  ggenie.h  md_cart.h  sram.h
core/cart_hw/svp/: ssp16.h  svp.h
core/debug/: cpuhook.c  cpuhook.h  debug.c  debug.h  debug_wrap.c  debug_wrap.h
core/input_hw/: input.h
core/m68k/: m68k.h  m68kconf.h  m68kcpu.c  m68kcpu.h
core/sound/: psg.h  sound.h  ym2413.h  ym2612.h  ym3438.h
core/z80/: osd_cpu.h  z80.h
gui/: BabyGrid.cpp  BabyGrid.h  breakpoints.cpp  breakpoints.h  disasembler.cpp  disassembler.h  edit_fields.cpp  edit_fields.h  gui.c  gui.h  gui.rc  hex_editor.cpp  hex_editor.h  plane_explorer.c  plane_explorer.h  resource.h  vdp_ram_debug.cpp  vdp_ram_debug.h
gui/capstone/: capstone.lib  capstone_32.lib  capstone_32d.lib  capstone_64.lib  capstone_64d.lib
ida/: bpts_window.h  ida_debug.cpp  ida_plugin.cpp  ida_plugin.h  moc_bpts_window.cpp  sega_roms_ldr.cpp  sega_roms_ldr.h
libretro/: libretro.c  osd.h
libretro/libretro_msvc/: genesis_plus_gx_libretro.vcxproj  genesis_plus_gx_libretro.vcxproj.filters  gpgx_debugger.sln  gpgx_debugger.vcxproj  gpgx_debugger.vcxproj.filters  gxida.vcxproj  gxida.vcxproj.filters  libretro_msvc.sln  sega_roms_ldr.cpp  sega_roms_ldr.vcxproj  sega_roms_ldr.vcxproj.filters
